try fixing certification layout on mobile

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -28,16 +28,19 @@
         z-index: 1000;
     }
 
+    .mobile-menu-container a {
+      text-decoration: none;
+    }
+
     .mobile-menu-header {
         display: flex;
         align-items: center;
         justify-content: space-between;
         padding: 10px; /* Adjust padding as needed */
-        background-color: #333; /* Example background color */
         color: #fff; /* Example text color */
         width: 50%;
     }
-    
+
     /* Style for the hamburger icon */
     .mobile-menu-toggle {
         cursor: pointer;
@@ -377,19 +380,19 @@
       }
 
       .certificate-items {
-        margin-top: -50px !important;
+        margin-top: -70px !important;
       }
 
       .certificate-card {
         top: unset;
         left: unset;
         height: unset;
-        width: 227.6px;
+        width: 170px;
       }
 
       .card-image {
-        height: 150px;
-        width: 200px;
+        height: 120px;
+        width: 170px;
       }
 
       .card-title {
